# airbyte-custom-connectors

./: .gitignore
source_microsoft_excel_online/: Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
source_microsoft_excel_online/source_microsoft_excel_online/: config_utils.py  run.py  source.py  spec.yaml  stream_reader.py  streams.py
source_microsoft_excel_online/unit_tests/: test_multi_workbooks.py  test_worksheet_stream.py
